--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2 class="section__title section__title--projects">What I do</h2>
             <div class="projects">
                 <div class="project">
-                    <h3>Software and Hardware Development</h3>
+                    <h3>Software Development</h3>
                     <p>Developed the machine vision of an autonomous car using multiple functions such as color selection, gray scale, and trackbar with the OpenCV library in a
                         camera module for a vehicle to establish basic lane detection capability </p>
                 </div> <!-- / project -->
